# rspg

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: simple-calculator.rs  terminal-token.rs
rspg/: Cargo.toml
rspg-derive/: Cargo.toml
rspg-derive/examples/: lambda-derive.rs
rspg-derive/src/: lib.rs  rspg.rs
rspg-derive/src/rspg/: data.rs
rspg-examples/: Cargo.toml
rspg-examples/src/lambda/: main.rs
rspg-examples/src/lambda-macros/: main.rs
rspg-examples/src/simple-calculator/: main.rs
rspg-macros/: Cargo.toml
rspg-macros/examples/: lambda-macros.rs
rspg-macros/src/: generate.rs  lib.rs  rspg.rs
rspg-macros/src/generate/: data.rs
rspg-macros/src/rspg/: data.rs
rspg/examples/: lambda.rs  terminal-token.rs
rspg/src/: display.rs  grammar.rs  lib.rs  macros.rs  set.rs  token.rs  utility.rs
rspg/src/lr0/: item.rs
rspg/src/lr1/: generator.rs  item.rs  mod.rs  parser.rs  table.rs
src/: grammar.rs  lib.rs  macros.rs  main.rs  set.rs  terminal.rs  token.rs  utility.rs
src/lr0/: item.rs
src/lr1/: generator.rs  item.rs  mod.rs  parser.rs  table.rs
tools/: prepare
