[package]
name = "rspg-macros"
version = "0.0.4-alpha"
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
edition = "2021"
description = "Macros for rspg."
license = "MIT"
homepage = "https://github.com/linyinfeng/rspg"
repository = "https://github.com/linyinfeng/rspg"
keywords = ["parser", "generator", "LR", "grammar"]
categories = ["parsing"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
rspg = { version = "0.0.4-alpha", path = "../rspg" }
syn = { version = "2.0.4", features = ["full", "extra-traits"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"
serde = "1.0.152"
ron = "0.8.0"
