[package]
name = "rspg"
version = "0.0.3-alpha.0"
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
edition = "2018"
description = "Simple LR(1) parser generator library."
license = "MIT"
homepage = "https://github.com/linyinfeng/rspg"
repository = "https://github.com/linyinfeng/rspg"
keywords = ["parser", "generator", "LR", "grammar"]
categories = ["parsing"]
readme = "README.md"

[dependencies]
prettytable-rs = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
