[package]
name = "rspg"
version = "0.0.4-alpha"
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
edition = "2021"
description = "Simple LR(1) parser generator library."
license = "MIT"
homepage = "https://github.com/linyinfeng/rspg"
repository = "https://github.com/linyinfeng/rspg"
keywords = ["parser", "generator", "LR", "grammar"]
categories = ["parsing"]
readme = "README.md"

[dependencies]
prettytable-rs = "0.9.0" # TODO deprecated
serde = { version = "1.0.143", features = ["derive"] }
